@@ -5,11 +5,13 @@ gtksourceview/gtksourcestylescheme.c
 gtksourceview/gtksourcetag.c
 gtksourceview/gtksourceview.c
 gtksourceview/language-specs/ada.lang
+gtksourceview/language-specs/boo.lang
 gtksourceview/language-specs/c.lang
 gtksourceview/language-specs/changelog.lang
 gtksourceview/language-specs/cpp.lang
 gtksourceview/language-specs/csharp.lang
 gtksourceview/language-specs/css.lang
+gtksourceview/language-specs/d.lang
 gtksourceview/language-specs/desktop.lang
 gtksourceview/language-specs/diff.lang
 gtksourceview/language-specs/html.lang
