@@ -1,9 +1,13 @@
-2006-07-24  Paolo Borelli  <steve@istique.net>
+2006-07-24  Paolo Borelli  <pborelli@katamail.com>
+
+	* gtksourceview/gtksourceview/language-specs/boo.lang: add boo lang.
+
+2006-07-24  Paolo Borelli  <pborelli@katamail.com>
 
 	* gtksourceview/gtksourceview/language-specs/d.lang: add D lang
 	file by Martin Szulecki.
 
-2006-06-22  Paolo Borelli  <steve@istique.net>
+2006-06-22  Paolo Borelli  <pborelli@katamail.com>
 
 	* gtksourceview/gtksourceview.c: fix bug #345252 – Automatic
 	indentation does not work with keypad enter.
